--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ tmp/**/*
 *.bak
 *.swp
 *~.nib
-local.properties
+*config-*local.yaml
 .settings/
 .loadpath
 # You may want to remove the sharp symbols here if you are using Maven
@@ -36,5 +36,6 @@ local.properties
 # --------------- #
 .studio/
 flows/
+*.DS_Store
 target/
 **/*.mflow
