Updating docs and adding global properties for mule.env and mule.key

--- a/src/main/resources/properties/config-dev.yaml
+++ b/src/main/resources/properties/config-dev.yaml
@@ -5,6 +5,9 @@ https:
   port: "8082"
   private.port: "8092"
   
+api:
+  id: "00000000"
+  
 auth:
   mode: "connected-app-credentials" # valid options are: platform-credentials or connected-app-credentials
   
