--- a/pom.xml
+++ b/pom.xml
@@ -68,11 +68,17 @@
 					</execution>
 				</executions>
 				<configuration>
+					<runtimeVersion>${app.runtime}</runtimeVersion>
 					<coverage>
 						<runCoverage>true</runCoverage>
 						<formats>
 							<format>html</format>
 						</formats>
+						<ignoreFlows>
+							<!-- Ignoring the entry points, main listener, console -->
+							<ignoreFlow>api-main</ignoreFlow>
+							<ignoreFlow>api-console</ignoreFlow>
+						</ignoreFlows>
 					</coverage>
 				</configuration>
 			</plugin>
