--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,8 @@
 							<mule.key>${mule.key}</mule.key>
 							<mule.env>${mule.env}</mule.env>
 							<anypoint.platform.config.analytics.agent.enabled>true</anypoint.platform.config.analytics.agent.enabled>
+							<anypoint.platform.client_id>${anypoint.platform.client_id}</anypoint.platform.client_id>
+							<anypoint.platform.client_secret>${anypoint.platform.client_secret}</anypoint.platform.client_secret>
 						</properties>
 					</cloudHubDeployment>
 					<classifier>mule-application</classifier>
