--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
 							<anypoint.platform.config.analytics.agent.enabled>true</anypoint.platform.config.analytics.agent.enabled>
 							<anypoint.platform.client_id>${anypoint.platform.client_id}</anypoint.platform.client_id>
 							<anypoint.platform.client_secret>${anypoint.platform.client_secret}</anypoint.platform.client_secret>
+							<api.id>${api.id}</api.id>
 						</properties>
 					</cloudHubDeployment>
 					<classifier>mule-application</classifier>
